# MusicVisualizer

./: CMakeLists.txt  LICENSE  README.md
MusicVisualizer/: CMakeLists.txt  MusicRendererOGL3.h  MusicVisualizer_main.cpp
PDE/visualizer/: BeatDetector.pde  Controls.pde  Particles.pde  PlayList.pde  Renderers.pde  RulingClass.pde  ShaderStack.pde  utils.pde  visualizer.pde
PDE/visualizer/data/: AngelicMandelbrot.glslf  Apolonian.glslf  Dodecahedralis7.glslf  ExpansiveReactionDiffusion_main.glslf  FractalLinesOfSymmetry.glslf  FractalPulse.glslf  GrinningFractal.glslf  HyperbolicPoincareWeave.glslf  HyperbolicSquare.glslf  HyperbolicTruchetTiles.glslf  InversiveKaleidoscope2.glslf  Julia.glslf  Julia_distance1.glslf  Julia_distance2.glslf  Julia_distance3.glslf  KIFS.glslf  Kaleidoscope3.glslf  Kali2.glslf  MandalaStarPattern.glslf  MandelbrotPatternDecoration.glslf  Mandelbrot_distance.glslf  MultiplicationTablesMandalas.glslf  PersianCarpet.glslf  RotationalFractal.glslf  TripToSamarkand.glslf  blur.glslf  multi_texture.glslf  view.glslf  waveEq.glslf
common/: CMakeLists.txt
common/SDL2OGL3/: DebugView.h
common/math/: CMakeLists.txt
resources/shaders/: color3D.glslv
